--- a/newsletter/package.json
+++ b/newsletter/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/tshepoandi/newsProject",
   "name": "newsletter",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -20,6 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
